--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,11 @@ cython_debug/
 #.idea/
 
 .langgraph_api
+
+# Temporary uploaded files
+temp_uploads/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
