--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,16 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-    "langgraph>=0.2.6",
-    "langchain-openai>=0.1.22",
-    "langchain>=0.2.14",
-    "langsmith>=0.1.0",
+    "langgraph>=0.2.6,<0.3.0",
+    "langchain>=0.2.14,<0.3.0", 
+    "langchain-openai>=0.1.22,<0.2.0",
+    "langsmith>=0.1.0,<0.2.0",
     "python-dotenv>=1.0.1",
     "pydantic>=2.0.0",
     "streamlit>=1.28.0",
     "pillow>=10.0.0",
     "pandas>=2.0.0",
+    "requests>=2.31.0",
 ]
 
 
